--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.17.0",
     "nodemon": "^3.1.10"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
