Subo últimos cambios funcionales del proyecto

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-MONGO_URI=mongodb://localhost:27017/historia
+
+
+
+MONGO_URI=mongodb+srv://admin:Nacional.1@cluster0.nqlwr5k.mongodb.net/historia?retryWrites=true&w=majority&appName=Cluster0
+
+
