--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "method-override": "^3.0.0",
+    "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
     "nodemon": "^3.1.10"
   },
