--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "method-override": "^3.0.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
